--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "emailjs-com": "^2.6.4",
     "infinite-react-carousel": "^1.2.11",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.0",
     "react-scripts": "4.0.3",
+    "react-scrollbars-custom": "^4.0.25",
     "react-select": "^3.2.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0"
