--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "tedxlavasan",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://saeedfarhang.github.io/TEDxLavasanProject/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "emailjs-com": "^2.6.4",
+    "gh-pages": "^3.1.0",
     "infinite-react-carousel": "^1.2.11",
     "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
@@ -26,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
