--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tedxlavasan",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://saeedfarhang.github.io/tedxlavasan.github.io/",
+  "homepage": "https://saeedfarhang.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
