--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tedxlavasan",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://saeedfarhang.github.io/",
+  "homepage": "https://saeedfarhang.github.io/tedxlavasanproject/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -29,7 +29,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "react-scripts build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
