--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "tedxlavasan",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tedxlavasan.com/",
+  "homepage": "www.tedxlavasan.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "emailjs-com": "^2.6.4",
-    "gh-pages": "^3.1.0",
     "infinite-react-carousel": "^1.2.11",
     "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
@@ -52,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
